my cart & final payment new design implement

--- a/src/app/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/admin-dashboard/admin-dashboard.component.html
@@ -1,6 +1,6 @@
 <!-- Admin Panel total counts of events,users,collections,logistics,commission -->
 
-<div class="container">
+<!-- <div class="container">
     <div class="row m-auto pt-5">
         <div class="col-md-4 col-sm-6">
             <div class="progress blue">
@@ -78,4 +78,24 @@
             <label class="text-center">Total Amount (Commission)</label>
         </div>
     </div>
+</div> -->
+
+
+
+<!-- adminPanel new Design  -->
+<div class="admin">
+    <section class="admin-card">
+        <div class="container-fluid">
+            <div class="chart_1">
+                <div class="row">
+                    <div class="col-xl-6 col-lg-12 text-center">
+                        <div id="columnchart_values1" class="chart"></div>
+                    </div>
+                    <div class="col-xl-6 col-lg-12 text-center">
+                        <div id="columnchart_values2" class="chart"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </div>
