--- a/src/app/admin-dashboard/admin-dashboard.component.css
+++ b/src/app/admin-dashboard/admin-dashboard.component.css
@@ -1,4 +1,4 @@
-.progress{
+/* .progress{
     width: 150px;
     height: 150px;
     line-height: 150px;
@@ -146,4 +146,4 @@
 }
 @media only screen and (max-width: 990px){
     .progress{ margin-bottom: 20px; }
-}
+} */
