--- a/src/app/create-event/create-event.component.html
+++ b/src/app/create-event/create-event.component.html
@@ -497,7 +497,7 @@
                                     </div>
                                 </div>
                                 <div class="enter_event_title">
-                                    <h6 class="text-center text-white">Event Title</h6>
+                                    <h6 class="text-center text-white">Event HashTag</h6>
                                     <div class="form-group">
                                         <div class="input-group">
                                             <input type="text" placeholder="# Enter your event hashtag here.."
@@ -687,7 +687,7 @@
                                         <div class="col-1">
                                             <label class="switch mt-2">
                                                 <input type="checkbox" class="custom-control-input" id="switch1"
-                                                    formControlName="isPublic">
+                                                    formControlName="isPublic" ngModel="{{ createdEventDetails && createdEventDetails.isPublic ? createdEventDetails.isPublic : false }}">
                                                 <span class="slider round"></span>
                                             </label>
                                         </div>
@@ -781,6 +781,64 @@
                             </div>
                         </div>
                     </div>
+                    <!-- <div class="new_event_slide ten_slide">
+                        <div class="event_inner_content_box">
+                            <div class="event_inner_content ">
+                                <div class="new_event_sec">
+                                    <div class="row">
+                                        <div class="col-3 m-auto pr-0 float-right new_event_menu">
+                                            <a><img src="/assets/images/10icon.png"></a>
+                                            <p class="text-white">New Event</p>
+                                        </div>
+                                        <div class="col-9 p-0">
+                                            <span class="text-white event_name"> Hello Rao Info Tech </span>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="event_bank_detail">
+                                    <div class="event_hashtag text-center">
+                                        <p># Event Hashtag</p>
+                                    </div>
+                                    <div class="sliding">
+                                        <div class="row bank_slider">
+                                            <div class="col-11 ">
+                                                <div class="slider1" >
+                                                    <div class="slide1">
+                                                        <input type="radio" name="gender" value="male" checked>
+                                                        <div class="slider_box1 ">
+                                                        </div>
+                                                    </div>
+                                                    <div class="slide1">
+                                                        <input type="radio" name="gender" value="female">
+                                                        <div class="slider_box1">
+                                                            <p>Bank name: {{details.bankName}}<br> Account number: {{details.accountNumber}}</p>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="col-1 p-0">
+                                                <div class="plus_add">
+                                                    <a data-toggle="modal" data-target="#exampleModal">
+                                                        <img src="/assets/images/plus.png"> </a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="check">
+                                        <label class="container">Instant transfer to my account
+                                            <input type="checkbox" checked="checked">
+                                            <span class="checkmark"></span>
+                                        </label>
+                                        <label class="container">Franster on 05-08-2019 to my account (this option saves
+                                            you on alert notifications)
+                                            <input type="checkbox">
+                                            <span class="checkmark"></span>
+                                        </label>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div> -->
                     <div class="new_event_slide ten_slide">
                         <div class="event_inner_content_box">
                             <div class="event_inner_content ">
@@ -802,32 +860,29 @@
                                     <div class="sliding">
                                         <div class="row bank_slider">
                                             <div class="col-11 ">
-                                                <div class="slider1">
+                                                <div class="slider1" *ngFor="let details of bankDetails">
                                                     <div class="slide1">
-                                                        <input type="radio" name="gender" value="male" checked>
-                                                        <div class="slider_box1 ">
-
-                                                            <!-- <input type="text" class="form-control"
-                                                            ngModel="{{details ? details.bankName : ''}}">
-
-                                                        <input type="text" class="form-control"
-                                                            ngModel="{{details ? details.accountNumber : ''}}">
-
-                                                        <input type="text" class="form-control"
-                                                            ngModel="{{details ? details.IFSCCode : ''}}"> -->
+                                                        <div class=slider_radio_btn>
+                                                            <input type="radio" id="first" name="radio-group"
+                                                                checked="">
+                                                            <label for="first"></label>
                                                         </div>
                                                     </div>
-                                                    <div class="slide1">
-                                                        <input type="radio" name="gender" value="female">
-                                                        <div class="slider_box1">
-                                                            <p>Bank name: hdfc<br> Account number: 12365478901234</p>
+                                                    <div class="slide1" >
+                                                        <div class=slider_radio_btn>
+                                                            <input type="radio" id="second" name="radio-group">
+                                                            <label for="second"></label>
+                                                        </div>
+                                                        <div class="slider_box1" >
+                                                            <p>Bank name: {{details.bankName}}<br> Account number: {{details.accountNumber}}</p>
                                                         </div>
                                                     </div>
                                                 </div>
                                             </div>
                                             <div class="col-1 p-0">
                                                 <div class="plus_add">
-                                                    <a>
+                                                    <a class="text-white" data-toggle="modal"
+                                                        data-target="#exampleModal">
                                                         <img src="/assets/images/plus.png"> </a>
                                                 </div>
                                             </div>
@@ -839,6 +894,7 @@
                                             <span class="checkmark"></span>
                                         </label>
                                         <label class="container">Franster on 05-08-2019 to my account (this option saves
+
                                             you on alert notifications)
                                             <input type="checkbox">
                                             <span class="checkmark"></span>
@@ -1088,7 +1144,65 @@
 </div>
 
 
+<!-- bankDetails modal start -->
 
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal_content">
+                <div class="">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                </div>
+                <form [formGroup]="bankDetailsForm" autocomplete="off">
+                    <div class="form-group">
+                        <div class="input-group ">
+                            <input type="text" (input)="validateBankName(bankDetailsForm.value)" id="bankName"
+                                class="form-control" formControlName="bankName" placeholder="Enter Bank Name"
+                                name="bankName"
+                                [ngClass]="{ 'is-invalid': errorMessage.bankName.touched && errorMessage.bankName.errors }">
+                        </div>
+                        <span id="message1" style="color: red; font-size: 14px;"></span>
+                        <div class="col-md-2" *ngIf=" errorMessage.bankName.touched && errorMessage.bankName.errors"
+                            class="invalid-feedback">
+                            <div *ngIf="errorMessage.bankName.errors.required">Bank Name is required</div>
+                            <div *ngIf="errorMessage.bankName.errors.minlength">Name must be at least 2 characters</div>
+                            <div *ngIf="errorMessage.bankName.errors.pattern">Please enter only alphabates</div>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="input-group ">
+                            <input type="text" class="form-control" formControlName="accountNumber"
+                                (input)="validateAccountNumber(bankDetailsForm.value)" id="accountNumber"
+                                [ngClass]="{ 'is-invalid': errorMessage.accountNumber.touched && errorMessage.accountNumber.errors }">
+                        </div>
+                        <span id="message" style="color: red; font-size: 14px;"></span>
+                        <div class="col-md-4"
+                            *ngIf="errorMessage.accountNumber.touched && errorMessage.accountNumber.errors"
+                            class="invalid-feedback">
+                            <div *ngIf="errorMessage.accountNumber.errors.required">Account Number is required</div>
+                            <div *ngIf="errorMessage.accountNumber.errors.minlength">Account Number must be only 16
+                                digits
+                            </div>
+                            <div *ngIf="errorMessage.accountNumber.errors.maxlength">Account Number must be only 16
+                                digits
+                            </div>
+                        </div>
+                    </div>
+                    <div class="btn_bank_detail">
+                        <button type="button" (click)="addMoreBankDetails()"
+                            [disabled]="isDisable || bankDetailsForm.invalid">Submit</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- bankDetails modal end -->
+
+
+<!-- overLay -->
 <div id="overlay" class="new_event_menu_box" style="display: none;">
     <div class="">
         <div class="event_menu">
