--- a/src/styles.css
+++ b/src/styles.css
@@ -1189,6 +1189,16 @@ input:checked+.slider:before {
 .check {
 	margin-top: 15px;
 }
+.btn_bank_detail button{
+	font-size: 35.83px;
+	height: 50px;
+	width: 100%;
+	background-color: #21485a !important;
+	line-height: 52px;
+	border: none;
+	color: #fff !important;
+	cursor: pointer;
+}
 
 /*slide 10 end*/
 
@@ -3875,44 +3885,38 @@ a.createEvent_button {
 
 
 /*admin dashboard css start*/
-
 /* header css */
-
 .header {
     position: fixed;
     z-index: 10;
     top: 0;
     left: 0;
-    background: #2499ef !important;
+    background: #2499ef;
     width: 100%;
-    color: #fff !important;
+    color: #fff;
 }
-
 .logo {
     font-size: 54px;
     position: fixed;
     margin-left: 90px;
 }
-
 #menu-action {
     display: block;
     float: left;
     padding: 15px 20px;
     line-height: 50px;
     margin-right: 15px;
-    color: #fff !important;
+    color: #fff;
     text-decoration: none;
-    background: rgba(0, 0, 0, 0.15) !important;
+    background: rgba(0, 0, 0, 0.15);
     font-size: 33px;
     -webkit-transition: all .2s ease-in-out;
     transition: all .2s ease-in-out;
 }
-
 i {
     display: inline-block;
     margin: 0 5px;
 }
-
 .sidebar {
     position: fixed;
     z-index: 10;
@@ -3920,40 +3924,34 @@ i {
     top: 80px;
     height: 100%;
     width: 80px;
-    background: #3b414e !important;
-    border-right: 1px solid #ddd;
+    background: #3b414e;
     text-align: center;
     -webkit-transition: all .2s ease-in-out;
     transition: all .2s ease-in-out;
     font-family: 'Russo One', sans-serif;
 }
-
 .sidebar:hover, .active, .hovered {
     width: 250px;
     -webkit-transition: all .2s ease-in-out;
     transition: all .2s ease-in-out;
 }
-
 .sidebar ul {
     list-style-type: none;
     padding: 0;
     margin: 0;
 }
-
 .sidebar .li {
     display: block;
 }
-
 .sidebar a {
     display: block;
     position: relative;
     white-space: nowrap;
     overflow: hidden;
     border-bottom: 1px solid #31343b;
-    color: #fff !important;
+    color: #fff;
     text-align: left;
 }
-
 .sidebar i {
     display: inline-block;
     width: 70px;
@@ -3969,17 +3967,17 @@ i {
     -o-animation-fill-mode: both;
     animation-fill-mode: both;
 }
-
+.sidebar a:hover {
+    background-color: white;
+    color: #3398db;
+}
 .admin-card .card {
     margin: 150px 120px 120px 200px;
     border-radius: 0px !important;
-
 }
-
 .admin-card label {
     margin: 10px 0px;
 }
-
 .admin-card {
     font-family: 'Russo One', sans-serif;
 }
@@ -3987,130 +3985,104 @@ i {
     width: 100%; 
     min-height: 450px;
 }
-.progress {
-    width: 150px;
-    height: 150px;
-    line-height: 150px;
-    background: none;
-    margin: 0 auto;
-    box-shadow: none;
-    position: relative;
-}
-
-.progress:after {
-    content: "";
-    width: 100%;
-    height: 100%;
-    border-radius: 50%;
-    border: 12px solid #fff !important;
-    position: absolute;
-    top: 0;
-    left: 0;
-}
-
-.progress>span {
-    width: 50%;
-    height: 100%;
-    overflow: hidden;
-    position: absolute;
-    top: 0;
-    z-index: 1;
-}
-
-.progress .progress-left {
-    left: 0;
-}
-
-.progress .progress-bar {
-    width: 100%;
-    height: 100%;
-    background: none;
-    border-width: 12px;
-    border-style: solid;
-    position: absolute;
-    top: 0;
-}
-
-.progress .progress-left .progress-bar {
-    left: 100%;
-    border-top-right-radius: 80px;
-    border-bottom-right-radius: 80px;
-    border-left: 0;
-    -webkit-transform-origin: center left;
-    transform-origin: center left;
-}
-
-.progress .progress-right {
-    right: 0;
-}
-
-.progress .progress-right .progress-bar {
-    left: -100%;
-    border-top-left-radius: 80px;
-    border-bottom-left-radius: 80px;
-    border-right: 0;
-    -webkit-transform-origin: center right;
-    transform-origin: center right;
-    animation: loading-1 1.8s linear forwards;
-}
-
-.progress .progress-value {
-    width: 90%;
-    height: 90%;
-    border-radius: 50%;
-    /*background: #44484b;*/
-    font-size: 24px;
-    color: #fff !important;
-    line-height: 135px;
-    text-align: center;
-    position: absolute;
-    top: 5%;
-    left: 5%;
-}
-.sidebar a:hover {
-    background-color: white !important;
-    color: #3398db;
-}
-
-.progress.blue .progress-bar {
-    border-color: #057dd9 !important;
-}
-
-.progress.blue .progress-left .progress-bar {
-    animation: loading-1 1.5s linear forwards 1.8s;
-}
-
-.progress.gray .progress-bar {
-    border-color: #3b414e;
-}
-
-.progress.gray .progress-left .progress-bar {
-    animation: loading-2 1.5s linear forwards 1.8s;
-}
-
-@keyframes loading-1 {
-    0% {
-        -webkit-transform: rotate(0deg);
-        transform: rotate(0deg);
-    }
-    100% {
-        -webkit-transform: rotate(180deg);
-        transform: rotate(180deg);
-    }
-}
-
-@keyframes loading-2 {
-    0% {
-        -webkit-transform: rotate(0deg);
-        transform: rotate(0deg);
-    }
-    100% {
-        -webkit-transform: rotate(144deg);
-        transform: rotate(144deg);
-    }
-}
-
 /*admin dashboard css end*/
+/* admin event list details page css start */
+.event-list-page-detail-admin{
+    padding: 150px;
+}
+.event-list-page-detail-admin{
+    font-family: 'Russo One', sans-serif; 
+}
+.content-1{
+   width: calc( 100% / 4);
+   padding: 10px;
+}
+.left-bg{
+    background-image: url("/assets/images/left-bg-admin-details.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    padding: 30px;
+    margin: 30px;
+    color: white;
+}
+.profile-pic-admin{
+    width: 180px;
+    height: 180px;
+    overflow: hidden;
+    border-radius: 50%;
+    margin: auto;
+    text-align: center
+}
+.profile-pic-admin img{
+    max-width: 100%;
+    min-height: 100%;
+    min-width: 100%;
+    max-height: 100%;
+    object-fit: cover;
+}
+.right-card {
+    padding: 30px 0px;
+}
+.right-card h3{
+    color: #4755a7;
+    margin-top: 10px;
+    font-size: 20px;
+}
+tr.gray-table-header{
+    background-color: #3b414e;
+}
+.gray-table-header th {
+    border-right: 1px solid #ddd;
+}
+tr.blue-table-header{
+    background-color: #4755a7;
+}
+.blue-table-header th {
+    border-right: 1px solid #ddd;
+}
+.chart_1{
+    border: 1px solid #dddddd;
+    background-color: #fff;
+    margin: 150px;
+}
+/* admin event list details page css start */
+/* total user list on admin panel css start */
+.total-user-table{
+    font-family: 'Russo One', sans-serif; 
+    font-weight: 0;
+}
+.total-user-table.card {
+    margin: 110px 30px 0px 110px;
+}
+.total-user-table .table th{
+    background-color: #dddddd; 
+}
+/* total user list on admin panel css start */
+/* total event list admin css start */
+.pink-bg{
+    background-image: url("/assets/images/admin-total-event-bg-pink.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    color: #fff;
+}
+.blue-bg{
+    background-image: url("/assets/images/admin-total-event-bg-blue.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    color: #fff;
+}
+.gray-bg{
+    background-image: url("/assets/images/admin-total-event-bg-gray.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    color: #fff;
+}
+.total-event-page{
+    margin: 110px 30px 0px 110px;
+    font-family: 'Russo One', sans-serif; 
+}
+/* total event list admin css end */
 
 /* responsive css start */
 
@@ -4374,6 +4346,7 @@ i {
 	.new_event_sec {
 		padding-top: 50px;
 	}
+
 	/*new event responsive css end*/
 	/*forgot password responsive css end*/
 	.btn_submit_pwd a {
